--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -288,7 +288,22 @@ header{
 .shopping:hover i{
     color: white;
 }
-
+.shopping span{
+    position: absolute;
+    top: 0;
+    right: -.6em;
+    background: lightskyblue;
+    width: 1.2em;
+    height: 1.2em;
+    border-radius: 50px;
+    color: #333333;
+    font-family: 'Montserrat',sans-serif;
+    font-weight: 800;
+    font-size: .9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .user {
     display: flex;
