--- a/public/css/pages/shopping-cart.css
+++ b/public/css/pages/shopping-cart.css
@@ -194,7 +194,7 @@
     height: 60%;
     width: 100%;
 }
-.total-dtelete a{
+.total-dtelete button{
     position: absolute;
     top: 15%;
     text-decoration: none;
@@ -206,14 +206,16 @@
     height: .9em;
     border-radius: 50px;
     margin-bottom: .35em;
+    border: none;
+    cursor: pointer;
 }
-.total-dtelete a:focus{
+.total-dtelete button:focus{
     outline: none;
 }
-.total-dtelete a:hover{
+.total-dtelete button:hover{
     background: rgb(77, 14, 23);
 }
-.total-dtelete a i{
+.total-dtelete button i{
     font-size: 10px;
     text-align: center;
     color: white;
@@ -231,17 +233,17 @@
 /*=================  footer section ============================*/
 .tot-footer{
     bottom: 0;
-    height: 30vh;
+    height: 35vh;
     width: 100%;
     position: relative;
-
+    margin-bottom: 20vh;
 }
 /*---- numbers right ----------*/
 .upper-footer-tgs{
     position: absolute;
-    margin-top: 1.5em;
+    margin-top: 1em;
     width: 50%;
-    height: 35%;
+    height: 55%;
     right: 0;
     display: flex;
     flex-direction: column;
@@ -249,10 +251,36 @@
     justify-content: space-between;
 }
 .tot-prod-nr{
-    background: rgb(172, 171, 171);
-    border-radius: 50px 0 0 50px;
-    height: 40%;
+    background: rgb(202, 202, 202);
+    height: 30%;
     width: 90%;
+}
+.tot-prod-nr div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+}
+.tot-cart-price{
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgb(241, 205, 210);
+    height: 90%;
+    width: 90%;
+
+}
+.tot-cart-price div{
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.tot-cart-price div:nth-child(2){
+    margin: .2em 0;
 }
 .upper-footer-tgs .tot h4{
     font-family: 'Amiri',serif;
@@ -269,13 +297,6 @@
     color: #464646;
     font-weight: 600;
 }
-.tot-cart-price{
-    background: rgb(231, 174, 183);
-    border-radius: 50px 0 0 50px;
-    height: 40%;
-    width: 90%;
-
-}
 
 /*---- button --------*/
 .button-check{
@@ -284,7 +305,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:space-between;
 }
 .button-check a{
     text-decoration: none;
@@ -305,6 +326,26 @@
 .button-check a button:hover{
     background: rgb(149, 89, 98);
 }
+.-generes{
+    margin-left: 20%;
+}
+
+/*---------------------- save for later    ----------------*/
+.save-forlater-wrapper{
+    background: rgb(235, 235, 235);
+    width: 111%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.save-forlater{
+    width: 79%;
+}
+.savefor-later h1::before{
+    background: rgba(32, 130, 241, 0.425);
+}
+
 
 /*=============== media queries =======================*/
 @media (min-width:560px){
@@ -368,7 +409,7 @@
         font-size: 22px;
     }
     .shop-header{
-        margin-top: -3vh;
+        margin-top: 0;
         width: 80%;
         height: 25vh;
     }
@@ -460,5 +501,13 @@
         font-weight: bold;
         font-size: 1.2rem;
         color: #8f8f8f;
+    }
+    .tot-footer{
+        bottom: 0;
+        height: 40vh;
+        width: 100%;
+        position: relative;
+        margin-top: 10vh;
+        margin-bottom: 30vh;
     }
 }
