--- a/public/css/pages/services.css
+++ b/public/css/pages/services.css
@@ -1,7 +1,7 @@
 .section-a{
     position: relative;
-    background: url('./img/sincerely-media-2eDp0UqvgB8-unsplash\ \(1\).jpg') no-repeat;
     background-size: cover;
+    background: url('img/web-img/sincerely-media.jpg') no-repeat;
     background-position: 0 125%;
     width: 100%;
     height: 70vh;
@@ -470,7 +470,7 @@
         height: 17em;
         left: 0;
         bottom: 0;
-        background: url('./img/standing\ girlstanding.svg') no-repeat;
+        background: url('./img/web-img/standing-girl.svg') no-repeat;
         background-size: contain ;
 
     }
