--- a/public/css/pages/shopping-cart.css
+++ b/public/css/pages/shopping-cart.css
@@ -109,6 +109,13 @@
     align-items: flex-start;
     justify-content: flex-end;
 }
+.name-price-wrapp{
+    margin-bottom: -.4em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+}
 .book-name{
     font-family: 'Amiri',serif;
     font-weight: bold;
@@ -129,7 +136,7 @@
     color: #275645;
 }
 
-.quantity{
+.quantity-wrapp{
     grid-column: 2 / 3;
     grid-row: 1 / 1;
     display: flex;
@@ -139,41 +146,17 @@
     align-items: flex-end;
     justify-content: center;
 }
-.quantity-buttons{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.quantity{
     width: 100%;
-    height: 40%;
-}
-.quantity a{
-    background: #A0616A;
-    width: .7em;
-    height: .7em;
-    border-radius: 50px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.quantity a:focus{
+    font-family: "Amiri",serif;
+    font-size: .8rem;
+    font-weight: 600;
+    background: none;
+    border: none;
     outline: none;
-}
-.quantity a:hover{
-    background: rgb(77, 14, 23);
-}
-.quantity a i{
-    color: white;
-    font-size: 8px;
     text-align: center;
 }
-.prod-quantity{
-    font-family: 'Montserrat',sans-serif;
-    font-weight: 600;
-    font-size: .8rem;
-    padding: 0 .6em;
-}
+
 
 
 .total-dtelete{
@@ -382,6 +365,10 @@
     .shop-header{
         width: 70%;
     }
+    .quantity{
+        width: 80%;
+    }
+
 }
 @media (min-width:900px){
     .shop-header{
@@ -398,6 +385,9 @@
         width: 80%;
         height: 80%;
         box-shadow: 0 0 3px  rgba(0, 0, 0, 0.178);
+    }
+    .quantity{
+        width: 60%;
     }
 
 }
@@ -438,28 +428,30 @@
         align-items: center;
         justify-content: space-between;
     }
+    .name-price-wrapp{
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
     .book-name{
         font-size: .9rem;
         margin-bottom: 0;
     }
     .book-price{
+        margin-bottom: 0;
         font-size: .90rem;
     }
-    .quantity{
+
+
+    .quantity-wrapp{
         height: 100%;
         margin-left: 5%;
         flex-direction: row;
         align-items: center;
     }
-    .quantity a{
-        width: .8em;
-        height: .8em;
-    }
-    .quantity a i{
-        font-size: 10px;
-    }
-    .prod-quantity{
-        padding: 0 1em;
+    .quantity{
+        width: 25%;
     }
 
 
