--- a/public/css/pages/product.css
+++ b/public/css/pages/product.css
@@ -1221,7 +1221,7 @@ body{
     .maylike-list li a img{
         max-width: 11em;
     }
-    /*------ back img -----------------*/
+    /*------ back images -----------------*/
 
 }
 
