--- a/public/css/pages/thankyou.css
+++ b/public/css/pages/thankyou.css
@@ -23,7 +23,7 @@
     position: relative;
     width: 70%;
     height: 10em;
-    background: url('./img/web-img/carolynv (2).jpg');
+    background: url('../../images/web-img/carolynv (2).jpg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
