--- a/public/css/pages/services.css
+++ b/public/css/pages/services.css
@@ -1,7 +1,7 @@
 .section-a{
     position: relative;
     background-size: cover;
-    background: url('img/web-img/sincerely-media.jpg') no-repeat;
+    background: url('../../images/web-img/sincerely-media-2eDpOUqvgB8-unsplash(1).jpg') no-repeat;
     background-position: 0 125%;
     width: 100%;
     height: 70vh;
@@ -368,6 +368,9 @@
     font-size: .9rem;
     color: rgb(179, 179, 179);
 }
+.cont-input:focus{
+    outline: .5px solid rgb(192, 191, 191);
+}
 .submit-contact{
     position: relative;
     background: none;
@@ -378,6 +381,10 @@
     margin-top: 1em;
     bottom: auto;
     padding: .3em  0;
+    z-index: 1;
+}
+.submit-contact:focus{
+    outline: none;
 }
 .submit-contact::before{
     position: absolute;
@@ -387,8 +394,17 @@
     border: 1px solid black;
     left: -100%;
     margin-top: -5%;
+    z-index: -1;
 }
-
+.submit-contact:hover::before {
+    left: -15%;
+    background: rgb(175, 93, 103);
+    border: none;
+    transition: .3s all ease-in-out;
+}
+.submit-contact:hover{
+    color: rgb(255, 255, 255);
+}
 .submit-contact::after{
     position: absolute;
     content: '';
@@ -397,7 +413,7 @@
     background: #E1BFBF;
     left: -80vw;
     top: 0;
-
+    z-index: -1;
 }
 @media (min-width: 700px){
     /*------- section-a  ----------*/
@@ -470,9 +486,9 @@
         height: 17em;
         left: 0;
         bottom: 0;
-        background: url('./img/web-img/standing-girl.svg') no-repeat;
+        background: url('../../images/web-img/standing-girl.svg') no-repeat;
         background-size: contain ;
-
+        z-index: 1;
     }
     /*--------------Services----------------------------*/
     .section-a h1{
