--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -1,72 +1,3 @@
-/*------------------------------------ SOCIAL MEDIA  -----------------------------*/
-.social{
-    z-index: 3;
-    top:30%;
-    background: rgba(239, 234, 231, 0.616);
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-}
-.social ul{
-    list-style: none;
-    padding: 0;
-    width: 40px;
-}
-.social ul .follow{
-    text-transform: uppercase;
-    font-size: 15px;
-    display: flex;
-    justify-content: center;
-    letter-spacing: 1px;
-    padding: 40px 18px ;
-    font-weight: bold;
-    line-height: 20px;
-    color:rgba(103, 103, 107, 0.822);
-    transform: rotate(-90deg);
-}
-.social ul li{
-    display: block;
-    margin: 15px;
-    width: 15px;
-    text-align: center;
-    padding: 5px;
-}
-.social ul li a{
-    color: rgba(103, 103, 107, 0.822);
-    text-decoration: none;
-
-}
-.social ul li i{
-    text-align: center;
-    color: rgba(103, 103, 107, 0.829);
-    background-color: transparent;
-    border: none;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-}
-.social ul .facebook i:hover{
-    color: #3d5999;
-    font-size: 23px;
-}
-.social ul .twitter i:hover{
-    color: #55acee;
-    font-size: 23px;
-
-}
-.social ul .instagram i:hover{
-    color: #e4405f;
-    font-size: 23px;
-
-}
-.social ul .pinterest i:hover{
-    color: #dd4b39;
-    font-size: 23px;
-
-}
 
 /*------------------ nav bar ---------------------------*/
 
@@ -268,6 +199,7 @@ header{
 
 
 .shopping {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -294,7 +226,7 @@ header{
     position: absolute;
     top: 0;
     right: -.6em;
-    background: lightskyblue;
+    background: rgb(131, 209, 192);
     width: 1.2em;
     height: 1.2em;
     border-radius: 50px;
@@ -306,6 +238,7 @@ header{
     align-items: center;
     justify-content: center;
 }
+
 
 .user {
     display: flex;
