--- a/public/css/pages/services.css
+++ b/public/css/pages/services.css
@@ -1,7 +1,7 @@
 .section-a{
     position: relative;
     background-size: cover;
-    background: url('../../images/web-img/sincerely-media-2eDpOUqvgB8-unsplash(1).jpg') no-repeat;
+    background: url('../../images/web-img/sincerely-media-2eDp0UqvgB8-unsplash (2).jpg') no-repeat;
     background-position: 0 125%;
     width: 100%;
     height: 70vh;
@@ -19,7 +19,7 @@
     top: 10vh;
     width: 20%;
 }
-.section-a h1{
+.section-a .backservicesh1{
     position: absolute;
     font-family: 'Montserrat',sans-serif;
     font-weight: 800;
@@ -29,7 +29,7 @@
     color: black;
     z-index: 1;
 }
-.section-a h3{
+.section-a .backservicesh3{
     position: absolute;
     font-family: 'Montserrat',sans-serif;
     font-weight: 800;
@@ -109,7 +109,7 @@
     color: rgb(124, 124, 124);
 }
 
-.wrapper-info p{
+.wrapper-info .wrapper-info-p{
     align-content: center;
     text-align: center;
     width: 80%;
@@ -121,7 +121,7 @@
     color: #252525;
 }
 
-.wrapper-info h2{
+.wrapper-info .wrapper-info-h2{
     text-align: center;
     font-family: 'Amiri',serif;
     font-size: 1.4rem;
@@ -130,7 +130,7 @@
     color: #000000;
 }
 
-.wrapper-info h3{
+.wrapper-info .wrapper-info-h3{
     position: absolute;
     font-family: 'Amiri',serif;
     font-weight: 600;
@@ -197,7 +197,7 @@
     justify-self: center;
     top: -4vh;
 }
-.works-info h3{
+.works-info .works-info-h3{
     text-align: center;
     color: white;
     font-family: 'Montserrat', sans-serif;
@@ -205,7 +205,7 @@
     font-size: 1rem;
     margin-bottom: 1em;
 }
-.works-info h2{
+.works-info .works-info-h2{
     text-align: center;
     font-family: 'Montserrat',sans-serif;
     font-weight: 400;
@@ -268,7 +268,7 @@
     place-items: center center;
 }
 
-.bubble p{
+.bubble .bubble-p{
     align-content: center;
     text-align: center;
     width: 85%;
@@ -280,7 +280,7 @@
     color: #252525;
 }
 
-.bubble h2{
+.bubble .bubble-h2{
     text-align: center;
     font-family: 'Montserrat',sans-serif;
     font-size: 1.2rem;
@@ -309,7 +309,7 @@
     top: 4em;
     left: 30%;
 }
-.contact-header h2{
+.contact-header .contact-header-h2{
     position: absolute;
     font-family: 'Montserrat' ,sans-serif;
     font-weight: 800;
@@ -317,7 +317,7 @@
     text-transform: uppercase;
     color: black;
 }
-.contact-header p{
+.contact-header .contact-header-p{
     position: relative;
     top: 3.5em;
     text-align: left;
@@ -327,7 +327,7 @@
     color: rgba(0, 0, 0, 0.4);
     width: 18.5em;
 }
-.contact-header p::before{
+.contact-header .contact-header-p::before{
     content: '';
     width: 50vw;
     height: 100%;
@@ -423,10 +423,10 @@
     .backservices{
         min-height: 6em;
     }
-    .section-a h1{
+    .section-a .backservicesh1{
         font-size: 2.5rem;
     }
-    .section-a h3{
+    .section-a .backservicesh3{
         font-size: 1rem;
         letter-spacing: .5px;
         margin-top: .5em
@@ -474,7 +474,7 @@
         margin-bottom: .5em;
     }
 
-    .bubble p{
+    .bubble .bubble-p{
         margin: 1em 1em 1em 1em;
     }
 }
@@ -491,10 +491,10 @@
         z-index: 1;
     }
     /*--------------Services----------------------------*/
-    .section-a h1{
+    .section-a .backservicesh1{
         font-size: 3rem;
     }
-    .section-a h3{
+    .section-a .backservicesh3{
         margin-top: 3em;
     }
     .section-a{
@@ -534,7 +534,7 @@
         margin-top: .5em;
     }
 
-    .wrapper-info p{
+    .wrapper-info .wrapper-info-p{
         width: 90%;
         margin: .5em .5em;
     }
@@ -568,7 +568,7 @@
     .works-info{
         top: 2.5vh;
     }
-    .works-info h2{
+    .works-info .works-info-h2{
         font-size: 1.8rem;
     }
     .section-c{
@@ -587,7 +587,7 @@
         width: 2em;
         height: 2em;
     }
-    .bubble p{
+    .bubble .bubble-p{
         width: 90%;
     }
 
@@ -607,13 +607,13 @@
         width: 20em;
         height: 6em;
     }
-    .contact-header h2{
+    .contact-header .contact-header-h2{
         font-weight: 800;
         font-size: 2.5rem;
         line-height: 100%;
         width: 150%;
     }
-    .contact-header p{
+    .contact-header .contact-header-p{
         bottom: 2em;
         font-size: .8rem;
         width: 90%;
@@ -641,10 +641,10 @@
         min-height: 10em;
         top: 7vh;
     }
-    .section-a h1{
+    .section-a .backservicesh1{
         font-size: 4rem;
     }
-    .section-a h3{
+    .section-a .backservicesh3{
         font-size: 1.3em;
         bottom: 0;
     }
@@ -673,7 +673,7 @@
     .works-info{
         top: 1vh;
     }
-    .works-info h2{
+    .works-info .works-info-h2{
         font-size: 1.9rem;
     }
     .section-c{
@@ -686,10 +686,10 @@
     .contact-header{
         left: 20%;
     }
-    .contact-header h2{
+    .contact-header .contact-header-h2{
         font-size: 2.9rem;
     }
-    .contact-header p{
+    .contact-header .contact-header-p{
         margin-top: 2em;
         font-size: 1rem;
         width: 100%;
