--- a/public/css/layout/header.css
+++ b/public/css/layout/header.css
@@ -313,3 +313,263 @@ header{
 .user-dropdown li:hover a::before {
     opacity: 1;
 }
+
+/*----------------------------*\
+	Cart
+\*----------------------------*/
+
+.header-ctn {
+    float: right;
+    padding: 15px 0;
+}
+
+.header-ctn>div {
+    display: inline-block;
+}
+
+.header-ctn>div+div {
+    margin-left: 15px;
+}
+
+.header-ctn>div>a {
+    display: block;
+    position: relative;
+    width: 90px;
+    text-align: center;
+    color: #FFF;
+}
+
+.header-ctn>div>a>i {
+    display: block;
+    font-size: 18px;
+}
+
+.header-ctn>div>a>span {
+    font-size: 12px;
+}
+
+.header-ctn>div>a>.qty {
+    position: absolute;
+    right: 15px;
+    top: -10px;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 10px;
+    color: #FFF;
+    background-color: #D10024;
+}
+
+.header-ctn .menu-toggle {
+    display: none;
+}
+
+.cart-dropdown {
+    position: absolute;
+    width: 300px;
+    background: #FFF;
+    padding: 15px;
+    -webkit-box-shadow: 0 0 0 2px #E4E7ED;
+    box-shadow: 0 0 0 2px #E4E7ED;
+    z-index: 99;
+    right: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.dropdown.open>.cart-dropdown {
+    opacity: 1;
+    visibility: visible;
+}
+
+.cart-dropdown .cart-list {
+    max-height: 180px;
+    overflow-y: scroll;
+    margin-bottom: 15px;
+}
+
+.cart-dropdown .cart-list .product-widget {
+    padding: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.cart-dropdown .cart-list .product-widget:last-child {
+    margin-bottom: 0;
+}
+
+.cart-dropdown .cart-list .product-widget .product-img {
+    left: 0;
+    top: 0;
+}
+
+.cart-dropdown .cart-list .product-widget .product-body .product-price {
+    color: #2B2D42;
+}
+
+.cart-dropdown .cart-btns {
+    margin: 0 -17px -17px;
+}
+
+.cart-dropdown .cart-btns>a {
+    display: inline-block;
+    width: calc(50% - 0px);
+    padding: 12px;
+    background-color: #D10024;
+    color: #FFF;
+    text-align: center;
+    font-weight: 700;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+.cart-dropdown .cart-btns>a:first-child {
+    margin-right: -4px;
+    background-color: #1e1f29;
+}
+
+.cart-dropdown .cart-btns>a:hover {
+    opacity: 0.9;
+}
+
+.cart-dropdown .cart-summary {
+    border-top: 1px solid #E4E7ED;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+/*=========================================================
+	09 -> CHECKOUT PAGE
+===========================================================*/
+
+.billing-details {
+    margin-bottom: 30px;
+}
+
+.shiping-details {
+    margin-bottom: 30px;
+}
+
+.order-details {
+    position: relative;
+    padding: 0 30px 30px;
+    border-right: 1px solid #E4E7ED;
+    border-left: 1px solid #E4E7ED;
+    border-bottom: 1px solid #E4E7ED;
+}
+
+.order-details:before {
+    content: "";
+    position: absolute;
+    left: -1px;
+    right: -1px;
+    top: -15px;
+    height: 30px;
+    border-top: 1px solid #E4E7ED;
+    border-left: 1px solid #E4E7ED;
+    border-right: 1px solid #E4E7ED;
+}
+
+.order-summary {
+    margin: 15px 0;
+}
+
+.order-summary .order-col {
+    display: table;
+    width: 100%;
+}
+
+.order-summary .order-col:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.order-summary .order-col>div {
+    display: table-cell;
+    padding: 10px 0;
+}
+
+.order-summary .order-col>div:first-child {
+    width: calc(100% - 150px);
+}
+
+.order-summary .order-col>div:last-child {
+    width: 150px;
+    text-align: right;
+}
+
+.order-summary .order-col .order-total {
+    font-size: 24px;
+    color: #D10024;
+}
+
+.order-details .payment-method {
+    margin: 30px 0;
+}
+
+.order-details .order-submit {
+    display: block;
+    margin-top: 30px;
+}
+
+
+/*=========================================================
+	13 -> RESPONSIVE
+===========================================================*/
+
+@media only screen and (max-width: 1201px) {}
+
+@media only screen and (max-width: 991px) {
+    #top-header .header-links.pull-left {
+        float: none !important;
+    }
+    #top-header .header-links.pull-right {
+        float: none !important;
+        margin-top: 5px;
+    }
+    .header-logo {
+        float: none;
+        text-align: center;
+    }
+    .header-logo .logo {
+        display: inline-block;
+    }
+    #product-imgs {
+        margin-bottom: 60px;
+        margin-top: 15px;
+    }
+    #rating {
+        text-align: center;
+    }
+    #reviews {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .section-title .section-nav {
+        float: none;
+        margin-top: 10px;
+    }
+    .section-tab-nav li {
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    [class*='col-xs'] {
+        width: 100%;
+    }
+    .store-grid {
+        float: none;
+        margin-top: 10px;
+    }
+    .store-pagination {
+        float: none;
+        margin-top: 10px;
+    }
+}
