--- a/public/css/pages/checkout.css
+++ b/public/css/pages/checkout.css
@@ -1,144 +1,211 @@
-/*-------------- stripe css -----------------------*/
-html {
-    box-sizing: border-box;
-}
+/*----------------------------*\
+	Typography
+\*----------------------------*/
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-.container{
-    font-family: 'Amiri', serif;
-    font-size: 16px;
+body {
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-}
-h2 {
-    margin-bottom: 10px;
+    color: #333;
 }
 
-.StripeElement {
-   background: white;
-    padding: 16px 16px;
-    border: 1px solid #ccc;
-}
-.StripeElement--invalid {
-    border-color: #fa755a;
-}
-.StripeElement--webkit-autofill {
-    background-color: #fefde5 !important;
-}
-#card-errors{
-    color: #fa755a;
-}
-.button-primary {
-    background: #3EBFA4;
-    color: white !important;
-    padding: 12px 40px;
-}
-.button-primary:hover {
-     background: rgb(49, 139, 120);
-}
-.button-primary:disabled {
-     background: rgb(131, 209, 192);
-     cursor: not-allowed;
-}
-/*------------------ checkout css -------------------*/
-h1.checkout-heading {
-    margin-top: 40px;
+h1, h2, h3, h4, h5, h6 {
+    color: #2B2D42;
+    font-weight: 700;
+    margin: 0 0 10px;
 }
 
-.checkout-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-/ / grid-column-gap: 10 px;
-    grid-gap: 30px;
-    margin: 40px auto 80px;
-}
-.checkout-section .checkout-table-container {
-    margin-left: 124px;
-}
-.checkout-section h2 {
-    margin-bottom: 28px;
-}
-.checkout-section .checkout-table-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 1px solid lightgray;
-    padding: 14px 0;
-}
-.checkout-section .checkout-table-row:last-child {
-     border-bottom: 1px solid lightgray;
- }
-.checkout-table-row-left, .checkout-table-row-right {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.checkout-table-row-left {
-    width: 75%;
-}
-.checkout-table-row-right {
-// width: 24%;
-// padding-top: 10px;
-}
-.checkout-table-img {
-    max-height: 60px;
-}
-.checkout-table-description {
-    color: black;
+a {
+    color: #2B2D42;
+    font-weight: 500;
+    -webkit-transition: 0.2s color;
+    transition: 0.2s color;
 }
 
-.checkout-table-price {
-    padding-top: 6px;
+a:hover, a:focus {
+    color: #D10024;
+    text-decoration: none;
+    outline: none;
 }
 
-.checkout-table-quantity {
-    border: 1px solid lightgray;
-    padding: 4px 12px;
-    margin-right: 5px;
+ul, ol {
+    margin: 0;
+    padding: 0;
+    list-style: none
+}
+
+/*----------------------------*\
+	Buttons
+\*----------------------------*/
+
+.primary-btn {
+    display: inline-block;
+    padding: 12px 30px;
+    background-color: #D10024;
+    border: none;
+    border-radius: 40px;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+.primary-btn:hover, .primary-btn:focus {
+    opacity: 0.9;
+    color: #FFF;
+}
+
+/*----------------------------*\
+	Inputs
+\*----------------------------*/
+
+/*-- Text input --*/
+
+.input {
+    height: 40px;
+    padding: 0 15px;
+    border: 1px solid #E4E7ED;
+    background-color: #FFF;
+    width: 100%;
+}
+
+textarea.input {
+    padding: 15px;
+    min-height: 90px;
+}
+
+/*----------------------------*\
+	Section
+\*----------------------------*/
+
+.section {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.section-title {
+    position: relative;
+    margin-bottom: 30px;
+    margin-top: 15px;
+}
+
+.section-title .title {
+    display: inline-block;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.section-title .section-nav {
+    float: right;
+}
+
+.section-title .section-nav .section-tab-nav {
+    display: inline-block;
+}
+
+.section-tab-nav li {
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.section-tab-nav li:last-child {
+    margin-right: 0;
+}
+
+.section-tab-nav li a {
+    font-weight: 700;
+    color: #8D99AE;
+}
+
+.section-tab-nav li a:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background-color: #D10024;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+.section-tab-nav li.active a {
+    color: #D10024;
+}
+
+.section-tab-nav li a:hover:after, .section-tab-nav li a:focus:after, .section-tab-nav li.active a:after {
+    width: 100%;
+}
+
+.section-title .section-nav .products-slick-nav {
+    top: 0;
+    right: 0;
+}
+
+.input-checkbox {
+    position: relative;
+    display: block;
+}
+
+.input-checkbox input[type="checkbox"]:not(:checked), .input-checkbox input[type="checkbox"]:checked {
+    position: absolute;
+    margin-left: -9999px;
+    visibility: hidden;
+}
+
+.input-checkbox label {
+    font-weight: 500;
+    min-height: 20px;
+    padding-left: 20px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+.input-checkbox input[type="checkbox"]+label span {
+    position: absolute;
+    left: 0;
+    top: 4px;
+    width: 14px;
+    height: 14px;
+    border: 2px solid #E4E7ED;
+    background: #FFF;
+}
+
+.input-checkbox input[type="checkbox"]+label span:after {
+    content: '✔';
+    position: absolute;
+    top: -2px;
+    left: 1px;
+    font-size: 10px;
+    color: #FFF;
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+}
+
+.input-checkbox input[type="checkbox"]:checked+label span {
+    background-color: #D10024;
+    border-color: #D10024;
 }
 
 
-.checkout-totals {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid lightgray;
-    padding: 18px 0;
-    line-height: 2;
-}
-.checkout-totals-right {
-    text-align: right;
+.input-checkbox input[type="checkbox"]:checked+label span:after {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
 }
 
-.checkout-totals-total {
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 2.2;
+.caption, .input-checkbox .caption {
+    margin-top: 5px;
+    max-height: 0;
+    overflow: hidden;
+    -webkit-transition: 0.3s max-height;
+    transition: 0.3s max-height;
 }
 
-/**
-* The CSS shown here will not be introduced in the Quickstart guide, but shows
-* how you can use CSS to style your Element's container.
-*/
-.StripeElement {
-    background-color: white;
-    padding: 16px 16px;
-    border: 1px solid #ccc;
-
-}
-
-.StripeElement--focus {
-// box-shadow: 0 1px 3px 0 #cfd7df;
-}
-
-.StripeElement--invalid {
-    border-color: #fa755a;
-}
-
-.StripeElement--webkit-autofill {
-    background-color: #fefde5 !important;
-}
-
-#card-errors {
-    color: #fa755a;
+.input-checkbox input[type="checkbox"]:checked~.caption {
+    max-height: 800px;
 }
