--- a/public/css/pages/shopping-cart.css
+++ b/public/css/pages/shopping-cart.css
@@ -149,14 +149,23 @@
 .quantity{
     width: 100%;
     font-family: "Amiri",serif;
-    font-size: .8rem;
+    font-size: .85rem;
     font-weight: 600;
     background: none;
     border: none;
     outline: none;
     text-align: center;
 }
-
+.form-control-qty{
+    width: 4em;
+    padding: .1em .5em ;
+    border: none;
+    text-align: center;
+}
+.form-control-qty:hover , .form-control-qty:focus{
+    outline: none;
+    border: 1px solid #A0616A;
+}
 
 
 .total-dtelete{
@@ -177,7 +186,13 @@
     height: 60%;
     width: 100%;
 }
-.total-dtelete button{
+.heq-update{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.heq-update button{
     position: absolute;
     top: 15%;
     text-decoration: none;
@@ -185,8 +200,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: .9em;
-    height: .9em;
+    width: 1.2em;
+    height: 1.2em;
     border-radius: 50px;
     margin-bottom: .35em;
     border: none;
@@ -199,7 +214,9 @@
     background: rgb(77, 14, 23);
 }
 .total-dtelete button i{
-    font-size: 10px;
+    font-size: 13px;
+    width: 1.2em;
+    height: 1.2em;
     text-align: center;
     color: white;
 }
