--- a/public/css/pages/services.css
+++ b/public/css/pages/services.css
@@ -1,7 +1,7 @@
 .section-a{
     position: relative;
     background-size: cover;
-    background: url('../../images/web-img/sincerely-media-2eDp0UqvgB8-unsplash (2).jpg') no-repeat;
+    background: url('../../images/web-img/sincerely-media-2eDp0UqvgB8-unsplash (3).jpg') no-repeat;
     background-position: 0 125%;
     width: 100%;
     height: 70vh;
@@ -424,7 +424,7 @@
         min-height: 6em;
     }
     .section-a .backservicesh1{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
     .section-a .backservicesh3{
         font-size: 1rem;
@@ -476,6 +476,7 @@
 
     .bubble .bubble-p{
         margin: 1em 1em 1em 1em;
+        font-size: .9rem;
     }
 }
 @media (min-width: 800px){
@@ -583,7 +584,7 @@
         margin-top: 2.5em;
     }
     .bubble i{
-        font-size: 2.3em;
+        font-size: 2.2em;
         width: 2em;
         height: 2em;
     }
@@ -630,8 +631,8 @@
         font-size: 1rem;
     }
     .svg-img{
-        width: 19em;
-        height: 19em;
+        width: 15em;
+        height: 15em;
     }
 
 }
@@ -642,25 +643,25 @@
         top: 7vh;
     }
     .section-a .backservicesh1{
-        font-size: 4rem;
+        font-size: 3rem;
     }
     .section-a .backservicesh3{
-        font-size: 1.3em;
+        font-size: 1em;
         bottom: 0;
     }
     /*-------------  section b -----*/
     .sectionb-wrapper{
-        width: 65%;
+        width: 70%;
     }
     .sectionb-wrapper{
-        max-width: 90%;
+        max-width: 80%;
     }
     /*------------------- section c ---------------------*/
     .c2{
-        width: 80%;
+        width: 90%;
     }
     .back-worksinfo{
-        min-height: 20vh;
+        min-height: 30vh;
     }
 
     .back-worksinfo::before{
@@ -674,10 +675,10 @@
         top: 1vh;
     }
     .works-info .works-info-h2{
-        font-size: 1.9rem;
+        font-size: 1.7rem;
     }
     .section-c{
-        min-height: 70vh;;
+        min-height: 80vh;;
     }
     .section-c2{
         top: -14vh;
@@ -687,11 +688,11 @@
         left: 20%;
     }
     .contact-header .contact-header-h2{
-        font-size: 2.9rem;
+        font-size: 2.7rem;
     }
     .contact-header .contact-header-p{
         margin-top: 2em;
-        font-size: 1rem;
+        font-size: .85rem;
         width: 100%;
     }
     .contact-header{
