--- a/public/css/pages/checkout.css
+++ b/public/css/pages/checkout.css
@@ -2,7 +2,7 @@
 	Typography
 \*----------------------------*/
 
-body {
+.section {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     color: #333;
@@ -88,12 +88,14 @@ textarea.input {
     position: relative;
     margin-bottom: 30px;
     margin-top: 15px;
+    font-size: 10px;
 }
 
 .section-title .title {
     display: inline-block;
     text-transform: uppercase;
     margin: 0;
+    font-size: 1.2rem;
 }
 
 .section-title .section-nav {
@@ -139,6 +141,27 @@ textarea.input {
 .section-title .section-nav .products-slick-nav {
     top: 0;
     right: 0;
+}
+
+
+/*----------------------------*\
+	Input
+\*----------------------------*/
+
+/*-- Text input --*/
+
+.input {
+    height: 50px;
+    padding: 0 20px;
+    border: 1px solid #E4E7ED;
+    background-color: #FFF;
+    width: 100%;
+    font-size: 16px;
+}
+
+textarea.input {
+    padding: 15px;
+    min-height: 90px;
 }
 
 .input-checkbox {
@@ -208,4 +231,125 @@ textarea.input {
 
 .input-checkbox input[type="checkbox"]:checked~.caption {
     max-height: 800px;
+}
+
+/*
+    Order details
+ */
+
+.order-details {
+    position: relative;
+    padding: 0 30px ;
+    border-right: 1px solid #E4E7ED;
+    border-left: 1px solid #E4E7ED;
+    border-bottom: 1px solid #E4E7ED;
+}
+
+.order-details:before {
+    content: "";
+    position: absolute;
+    left: -1px;
+    right: -1px;
+    top: -15px;
+    height: 30px;
+    border-top: 1px solid #E4E7ED;
+    border-left: 1px solid #E4E7ED;
+    border-right: 1px solid #E4E7ED;
+}
+
+.order-summary {
+    margin: 15px 0;
+}
+
+.order-summary .order-col {
+    display: table;
+    width: 100%;
+}
+
+.order-summary .order-col:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.order-summary .order-col>div {
+    display: table-cell;
+    padding: 10px 0;
+    font-size: 17px;
+}
+
+.order-summary .order-col>div:first-child {
+    width: calc(100% - 150px);
+}
+
+.order-summary .order-col>div:last-child {
+    width: 150px;
+    text-align: right;
+}
+
+.order-summary .order-col .order-total {
+    font-size: 24px;
+    color: #D10024;
+}
+
+.order-details .payment-method {
+    margin: 30px 0;
+}
+
+.order-details .order-submit {
+    display: block;
+    margin-top: 30px;
+}
+
+
+/*----------------------------*\
+	Breadcrumb
+\*----------------------------*/
+
+#breadcrumb {
+    padding: 30px 0;
+    background: #FBFBFC;
+    border-bottom: 1px solid #E4E7ED;
+    margin-bottom: 30px;
+}
+
+#breadcrumb .breadcrumb-header {
+    display: inline-block;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 15px;
+    text-transform: uppercase;
+}
+
+#breadcrumb .breadcrumb-tree {
+    display: inline-block;
+}
+
+#breadcrumb .breadcrumb-tree li {
+    display: inline-block;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+#breadcrumb .breadcrumb-tree li+li {
+    margin-left: 10px;
+}
+
+#breadcrumb .breadcrumb-tree li+li:before {
+    content: '/';
+    display: inline-block;
+    color: #8D99AE;
+    margin-right: 10px;
+}
+
+#breadcrumb .breadcrumb-tree li a {
+    color: #8D99AE;
+}
+
+#breadcrumb .breadcrumb-tree li a:hover {
+    color: #D10024;
+}
+
+.creditCard-info {
 }
