--- a/public/css/pages/shopping-cart.css
+++ b/public/css/pages/shopping-cart.css
@@ -30,6 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-direction: column;
 }
 .shop-header h1{
     font-family: 'Dancing Script', cursive;
@@ -42,7 +43,7 @@
 .shop-header h1::before{
     position: absolute;
     content: '';
-    width: 90%;
+    width: 100%;
     right: -10%;
     border-radius: 50px;
     height: 30%;
@@ -501,4 +502,11 @@
         position: relative;
         margin-top: 10vh;
     }
+}
+ .shopping-pg-wrapper{
+     width: 90%;
+     min-height: 70vh;
+ }
+.shop-header h1{
+    font-size: 1.5rem;
 }
